--- a/src/components/MoviesList/MovieList.css
+++ b/src/components/MoviesList/MovieList.css
@@ -2,10 +2,10 @@
     margin-left: 50px;
     width: 1280px;
     height: 278px;
-    background-color: #83bd4d;
 }
 
 .carousel2 .slick-list {
+    width: 1280px;
     height: 278px;
     margin-right: -30px;
 }
@@ -15,7 +15,7 @@
 }
 
 .carousel2 .slick-next {
-    right: -41px;
+    right: -42px;
     top: 139px;
     height: 278px;
     width: 185px;
@@ -25,3 +25,4 @@
     height: 278px;
     width: 185px;
 }
+
