--- a/src/components/MoviesList/MovieList.css
+++ b/src/components/MoviesList/MovieList.css
@@ -26,3 +26,11 @@
     width: 185px;
 }
 
+.slick-dots li button:before {
+    color: white;
+}
+
+.slick-dots li.slick-active button:before {
+    color:white !important;
+}
+
