--- a/src/components/MovieInfo/MovieInfo.css
+++ b/src/components/MovieInfo/MovieInfo.css
@@ -74,6 +74,10 @@
     gap: 13px;
 }
 
+.posterGenres a {
+    text-decoration: none;
+}
+
 .genre {
     display: flex;
     justify-content: center;
