--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -16,3 +16,8 @@
     width: 30px;
     height: 30px;
 }
+
+.navBar img:hover {
+    transform: scale(1.20);
+    transition: transform 0.15s linear;
+}
