--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,7 +11,7 @@
     height: 720px;
 }
 
-.navBar img {
+.navImg {
     margin: 20px;
     width: 30px;
     height: 30px;
@@ -20,4 +20,54 @@
 .navBar img:hover {
     transform: scale(1.20);
     transition: transform 0.15s linear;
+}
+
+.search {
+    width: 45px;
+    height: 45px;
+}
+
+input[type=checkbox].toggle-switch {
+    margin-top: 31px;
+    transform: rotate(90deg);
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    width: 56px;
+    height: 26px;
+    border-radius: 3em;
+    background-color: #ddd;
+    outline: 0;
+    cursor: pointer;
+    transition: background-color 0.09s ease-in-out;
+    position: relative;
+}
+
+input[type=checkbox].toggle-switch:checked {
+    background-color: rgba(15, 239, 253, 0.8);
+}
+
+input[type=checkbox].toggle-switch::after {
+    content: '';
+    width: 26px;
+    height: 26px;
+    background-color: white;
+    border-radius: 3em;
+    position: absolute;
+    transform: scale(0.7);
+    left: 0;
+    transition: left 0.09s ease-in-out;
+    box-shadow: 0 0.1em rgba(0, 0, 0, 0.5);
+}
+
+input[type=checkbox].toggle-switch:checked::after {
+    left: 29px;
+}
+
+.searchButton {
+    cursor: pointer;
+}
+
+input:focus {
+    outline: none;
 }
