--- a/src/components/MovieInfo/MovieInfo.css
+++ b/src/components/MovieInfo/MovieInfo.css
@@ -40,6 +40,11 @@
     height: 25px;
 }
 
+.imdb img:hover {
+    transform: scale(1.20);
+    transition: transform 0.15s linear;
+}
+
 .ratings {
     display: flex;
     align-items: center;
@@ -86,6 +91,11 @@
     height: 24px;
     background: rgba(29, 29, 29, 0.5);
     border-radius: 0px 8px;
+}
+
+.genre:hover {
+    transform: scale(1.20);
+    transition: transform 0.15s linear;
 }
 
 .genre p {
